k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diareat-deployment
  namespace: diareat
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      app: diareat
  template:
    metadata:
      labels:
        app: diareat
    spec:
      containers:
      - name: diareat
        image: synoti21/diareat-backend:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: 0.3
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /swagger-ui/index.html
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 24
---
apiVersion: v1
kind: Service
metadata:
  name: diareat-svc
  namespace: diareat
spec:
  selector:
    app: diareat
  ports:
    - protocol: TCP
      port: 2938
      targetPort: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: diareat-route
  namespace: diareat
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`diareat.thisiswandol.com`)
      kind: Rule
      services:
        - name: diareat-svc
          port: 2938
  tls:
    certResolver: myresolver
